# Maliev.LineChatbotService

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: README.md  ci-develop.yml  ci-main.yml  ci-staging.yml  dev-deploy.yml  prod-deploy.yml  staging-deploy.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  test_runner.py
backend/src/: __init__.py  main.py
backend/src/ai/: __init__.py  base.py  manager.py
backend/src/ai/models/: __init__.py
backend/src/ai/providers/: __init__.py  deepseek.py  gemini.py  openai.py
backend/src/ai/strategies/: __init__.py
backend/src/ai/utils/: __init__.py
backend/src/api/v1/: __init__.py  admin.py  ai.py  auth.py  cache.py  customers.py  instructions.py  metrics.py
backend/src/config/: dynamic.py  settings.py
backend/src/customers/: __init__.py  manager.py
backend/src/database/: __init__.py  redis_client.py
backend/src/handlers/: __init__.py
backend/src/instructions/: __init__.py  manager.py
backend/src/line/: __init__.py  client.py  models.py  webhook.py
backend/src/middleware/: __init__.py  auth_middleware.py  logging_middleware.py
backend/src/secrets/: __init__.py  manager.py
backend/src/utils/: logging.py
backend/tests/: __init__.py  conftest.py  test_config.py
backend/tests/component/: __init__.py  test_redis_integration.py  test_webhook_integration.py
backend/tests/smoke/: __init__.py  test_app_smoke.py
backend/tests/unit/: __init__.py  test_config.py  test_line_webhook.py  test_redis_client.py
